--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,10 @@
 main:
-  - title: "Posts"
-    url: /posts/
-  - title: "Categories"
-    url: /categories/
-  - title: "Tags"
-    url: /tags/
   - title: "About"
     url: /about/
+  - title: "Articles"
+    url: /articles/
+  - title: "Projects"
+    url: /projects/
+  - title: "Publication"
+    url: /publications/
+  
