--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,6 @@ main:
     url: /articles/
   - title: "Projects"
     url: /projects/
-  - title: "Publication"
+  - title: "Publications"
     url: /publications/
   
