--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ author:
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/thanh-tung-vu/"
     - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
+      icon: "fab fa-fw fa-x-twitter"
       url: "https://x.com/thanhtungvudata"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
@@ -84,7 +84,7 @@ footer:
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/thanh-tung-vu/"
     - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
+      icon: "fab fa-fw fa-x-twitter"
       url: "https://x.com/thanhtungvudata"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
