--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ footer:
       url: "https://x.com/thanhtungvudata"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://thanhtungvudata.github.io/"
+      url: "https://github.com/thanhtungvudata"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://www.instagram.com/thanhtungvulive/"
