--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,8 @@
 main:
   - title: "About"
     url: /about/
+  - title: "CV"
+    url: https://drive.google.com/file/d/1KYaQ6zc1x3rwwmQp5PtgNBHFosryzo9_/view?usp=sharing
   - title: "Articles"
     url: /articles/
   - title: "Publications"
