--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ plugins:
 author:
   name   : "Thanh Tung Vu"
   avatar : "/assets/images/bio_3.jpg"
-  bio    : "Data Scientist with a PhD in Electrical Engineering, specializing in Applied Optimisation and Machine Learning."
+  bio    : "Data Scientist/Research Fellow with a PhD in Electrical Engineering, specializing in Applied Optimisation and Machine Learning."
   location: "Sydney, Australia"
   links:
     - label: "Email"
