--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
     url: /about/
   - title: "CV"
     url: https://drive.google.com/file/d/1qs4v7oaGp3iknuSUoAARsDRUXsCfRZq_/view?usp=sharing
-  - title: "Articles"
-    url: /articles/
+  - title: "Portfolio"
+    url: /portfolio/
   - title: "Publications"
     url: /publications/
   
