--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ plugins:
 author:
   name   : "Thanh Tung Vu"
   avatar : "/assets/images/6.jpeg"
-  bio    : "Data Scientist/Research Fellow with a PhD in Electrical Engineering, specializing in Applied Optimisation and Machine Learning."
+  bio    : "Research/Data Scientist | Deep Learning and Machine Learning Specialist"
   location: "Sydney, Australia"
   links:
     - label: "Email"
