--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Thanh Tung Vu
-email:
+email: tungvu.telecom@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This is my portfolio website where I share my projects and thoughts on data science, machine learning, deep learning, and generative AI.
 twitter_username: username
 github_username: username
 minimal_mistakes_skin: default
@@ -62,7 +60,7 @@ plugins:
 author:
   name   : "Thanh Tung Vu"
   avatar : "/assets/images/6.jpeg"
-  bio    : "Research/Data Scientist, Deep Learning and Machine Learning Specialist"
+  bio    : "Data/Research Scientist, Deep Learning and Machine Learning Specialist"
   location: "Sydney, Australia"
   links:
     - label: "Email"
